--- a/resnet50_plus_ridge.ipynb
+++ b/resnet50_plus_ridge.ipynb
@@ -81,13 +81,37 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model_name = \"<YOUR_MODEL_NAME>\"\n",
+        "token = \"<YOUR_TOKEN>\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "p9pR4gsI9VE2"
       },
       "outputs": [],
       "source": [
-        "%pip install --upgrade crunch-cli\n",
-        "!crunch setup --notebook broad-1 hello --token aaaabbbbccccddddeeeeffff"
+        "import os\n",
+        "\n",
+        "required_dirs = ['DC1.zarr', 'DC5.zarr', 'UC1_I.zarr', 'UC1_NI.zarr', \n",
+        "                 'UC6_I.zarr', 'UC6_NI.zarr', 'UC7_I.zarr', 'UC9_I.zarr']\n",
+        "\n",
+        "data_dir = './data'\n",
+        "existing_dirs = os.listdir(data_dir) if os.path.exists(data_dir) else []\n",
+        "\n",
+        "missing_dirs = [dir for dir in required_dirs if dir not in existing_dirs]\n",
+        "\n",
+        "if missing_dirs:\n",
+        "    %pip install numpy==1.26.4\n",
+        "    %pip install crunch-cli --upgrade\n",
+        "    !crunch setup --notebook --size default broad-1 {model_name} --token {token}\n",
+        "else:\n",
+        "    print(\"All required .zarr directories exist - no need to run crunch setup\")"
       ]
     },
     {
@@ -120,7 +144,7 @@
       },
       "outputs": [],
       "source": [
-        "%pip install numpy pandas torch scipy openslide-python pydantic pytorch-lightning dask distributed matplotlib seaborn scikit-learn opencv-python scanpy spatialdata zarr ome-zarr"
+        "%pip install pandas torch scipy openslide-python pydantic pytorch-lightning dask distributed matplotlib seaborn scikit-learn opencv-python scanpy spatialdata zarr ome-zarr"
       ]
     },
     {
