--- a/resnet50_plus_ridge.ipynb
+++ b/resnet50_plus_ridge.ipynb
@@ -714,7 +714,9 @@
         "    print(\"\\nPreprocess dataset DONE:\", \" - \".join(list_ST_name_data), \"\\n\")\n",
         "\n",
         "\n",
-        "def preprocess_spatial_transcriptomics_data_test(name_data, sdata, cell_id_list, dir_processed_dataset, target_patch_size=32, vis_width=1000, show_extracted_images=False):\n",
+        "def preprocess_spatial_transcriptomics_data_test(name_data, sdata, cell_id_list, dir_processed_dataset, target_patch_size=32\n",
+        "\n",
+        ", vis_width=1000, show_extracted_images=False):\n",
         "    \"\"\"\n",
         "    Test step: Preprocesses spatial transcriptomics data by performing the following steps for the selected ST data:\n",
         "    1. Extract spatial coordinates of the selected cells.\n",
@@ -1734,7 +1736,7 @@
         "        \"n_fold\": 2,  # Number of folds for leave-one-out cross-validation\n",
         "\n",
         "        # Encoder settings\n",
-        "        \"batch_size\": 128,  # Batch size for training\n",
+        "        \"batch_size\": 32,  # Batch size for training\n",
         "        \"num_workers\": 0,  # Number of workers for loading data (set 0 for submission on CrunchDAO plaform)\n",
         "\n",
         "        # Train settings\n",
