almost done with submission

--- a/submission.ipynb
+++ b/submission.ipynb
@@ -1128,7 +1128,91 @@
     "    data_file_path: str,  # Path to a test dataset (in Zarr format) to perform inference on.\n",
     "    model_directory_path: str  # Path to save the trained model and results\n",
     "):\n",
-    "    "
+    "\n",
+    "    # Load the NPZ file\n",
+    "    embeddings_table = np.load(os.path.join(model_directory_path, f\"combined_dataset.npz\"))\n",
+    "\n",
+    "    # Load and normalize the data\n",
+    "    embeddings = embeddings_table['embeddings'][::100]\n",
+    "    gene_expression = embeddings_table['gene_expression'][::100]\n",
+    "    gene_expression_normalized = log1p_normalization(gene_expression)\n",
+    "\n",
+    "    # Load training configuration parameters\n",
+    "    config_path = os.path.join(model_directory_path, \"config.json\")\n",
+    "    with open(config_path, 'r') as f:\n",
+    "        args_dict = json.load(f)\n",
+    "    args = SimpleNamespace(**args_dict)\n",
+    "\n",
+    "\n",
+    "    # Set device to GPU if available, else use CPU!!\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "    ### Preprocess and Embedding Data + Regression inference ###\n",
+    "\n",
+    "    # Read the spatial data from the provided file\n",
+    "    sdata = sd.read_zarr(data_file_path)\n",
+    "\n",
+    "    # Extract cell IDs for test and validation groups\n",
+    "    cell_ids = list(sdata[\"cell_id-group\"].obs.query(\"group == 'test' or group == 'validation'\")[\"cell_id\"])\n",
+    "\n",
+    "    # Extract gene names from the spatial data\n",
+    "    gene_names = list(sdata[\"anucleus\"].var.index)\n",
+    "\n",
+    "    # Extract the name of the dataset from the file path (without extension)\n",
+    "    name_data = os.path.splitext(os.path.basename(data_file_path))[0]\n",
+    "\n",
+    "    # Directory for processed test dataset (temporary storage)\n",
+    "    dir_processed_dataset_test = os.path.join(\"/tmp\", f\"processed_dataset_test\")\n",
+    "    os.makedirs(dir_processed_dataset_test, exist_ok=True)\n",
+    "\n",
+    "    # Directory to store the test data embeddings (temporary storage)\n",
+    "    test_embed_dir = os.path.join(dir_processed_dataset_test, \"ST_data_emb\")\n",
+    "    os.makedirs(test_embed_dir, exist_ok=True)\n",
+    "\n",
+    "    # Preprocess the test data for embedding (patch extraction)\n",
+    "    preprocess_spatial_transcriptomics_data_test(name_data, sdata, cell_ids, dir_processed_dataset_test,\n",
+    "                                                 args.target_patch_size, args.vis_width, args.show_extracted_images)\n",
+    "\n",
+    "    print(f\"\\n-- {name_data} EMBEDDING--\\n\")\n",
+    "    # Generate and load the embeddings for the test data\n",
+    "    assets = embedding_and_load_data(name_data, dir_processed_dataset_test, test_embed_dir, args, device)\n",
+    "\n",
+    "    # Extract embeddings features for prediction\n",
+    "    X_test = assets[\"embeddings\"]\n",
+    "    print(\"Embedding shape (X_test):\", X_test.shape)\n",
+    "\n",
+    "    average_predictions = nearest_neighbor_predict(embeddings, gene_expression_normalized, X_test)\n",
+    "\n",
+    "    ### Prepare and Return Predictions ###\n",
+    "\n",
+    "    # Convert the predictions to a DataFrame (the gene expression value must be rounded to two decimal places)\n",
+    "    prediction = pd.DataFrame(np.round(average_predictions, 2), index=cell_ids, columns=gene_names)\n",
+    "    # Reset index to have 'cell_id' as a column\n",
+    "    prediction = prediction.reset_index(names=\"cell_id\")\n",
+    "\n",
+    "    # Melt the DataFrame to the expected output for the challenge\n",
+    "    prediction = prediction.melt(id_vars=\"cell_id\", var_name=\"gene\", value_name=\"prediction\")\n",
+    "    # prediction = prediction.sort_values(by=[\"cell_id\", \"gene\"]).reset_index(drop=True)\n",
+    "\n",
+    "    # Free memory by deleting large variables and performing garbage collection\n",
+    "    del average_predictions, sdata, X_test, assets\n",
+    "    gc.collect()\n",
+    "\n",
+    "    print(f\"\\n-- {name_data} PREDICTION DONE\\n\")\n",
+    "\n",
+    "    # Return the final prediction DataFrame\n",
+    "    return prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crunch.test(\n",
+    "    no_determinism_check=True,\n",
+    ")"
    ]
   }
  ],
