new submission file

--- a/submission.ipynb
+++ b/submission.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install numpy==1.26.4 pandas torch scipy openslide-python pydantic pytorch-lightning dask distributed matplotlib seaborn scikit-learn opencv-python scanpy spatialdata zarr ome-zarr"
+    "%pip install numpy==1.26.4 pandas torch scipy openslide-python pydantic pytorch-lightning dask distributed matplotlib seaborn scikit-learn opencv-python scanpy spatialdata zarr ome-zarr timm"
    ]
   },
   {
@@ -432,7 +432,7 @@
     "    gc.collect()\n",
     "\n",
     "\n",
-    "def preprocess_spatial_transcriptomics_data_train(list_ST_name_data, data_directory_path, dir_processed_dataset, size_subset=None, target_patch_size=32, vis_width=1000, show_extracted_images=False):\n",
+    "def preprocess_spatial_transcriptomics_data_train(list_ST_name_data, data_directory_path, dir_processed_dataset, size_subset=None, target_patch_size=64, vis_width=1000, show_extracted_images=False):\n",
     "    \"\"\"\n",
     "    Train step: Preprocesses spatial transcriptomics data by performing the following steps for each ST:\n",
     "    1. Samples the dataset and extract spatial coordinates of cells.\n",
@@ -530,7 +530,7 @@
     "    print(\"\\nPreprocess dataset DONE:\", \" - \".join(list_ST_name_data), \"\\n\")\n",
     "\n",
     "\n",
-    "def preprocess_spatial_transcriptomics_data_test(name_data, sdata, cell_id_list, dir_processed_dataset, target_patch_size=32, vis_width=1000, show_extracted_images=False):\n",
+    "def preprocess_spatial_transcriptomics_data_test(name_data, sdata, cell_id_list, dir_processed_dataset, target_patch_size=64, vis_width=1000, show_extracted_images=False):\n",
     "    \"\"\"\n",
     "    Test step: Preprocesses spatial transcriptomics data by performing the following steps for the selected ST data:\n",
     "    1. Extract spatial coordinates of the selected cells.\n",
@@ -1076,7 +1076,49 @@
     "        # Generate and save embeddings\n",
     "        embed_tiles(tile_dataloader, encoder, embed_path, device, encoder.precision)\n",
     "    else:\n",
-    "        print(f\"Skipping embedding {os.path.basename(embed_path)} as it already exists\")"
+    "        print(f\"Skipping embedding {os.path.basename(embed_path)} as it already exists\")\n",
+    "\n",
+    "def embedding_and_load_data(name_data, dir_processed_dataset_test, test_embed_dir, args, device):\n",
+    "    \"\"\"\n",
+    "    Embedding of the images using the specified encoder and load the resulting data.\n",
+    "\n",
+    "    Args:\n",
+    "    - name_data (str): The name of the data to process.\n",
+    "    - dir_processed_dataset_test (str): Directory where the processed test dataset is stored.\n",
+    "    - test_embed_dir (str): Directory where the embeddings should be saved.\n",
+    "    - args (namespace): Arguments object containing parameters like encoder, batch_size, etc.\n",
+    "    - device (torch.device): The device (CPU or GPU) to perform computations on.\n",
+    "\n",
+    "    Returns:\n",
+    "    - assets (dict): Dictionary containing the 'barcodes', 'coords', and 'embeddings' from the embedded data.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Print the encoder being used\n",
+    "    print(f\"Embedding images using {args.encoder} encoder\")\n",
+    "\n",
+    "    # Create encoder based on the specified model and load its weights\n",
+    "    encoder = inf_encoder_factory(args.encoder)(args.weights_root)\n",
+    "\n",
+    "    # Define the path for the patches data (h5 file)\n",
+    "    tile_h5_path = os.path.join(dir_processed_dataset_test, \"patches\", f'{name_data}.h5')\n",
+    "\n",
+    "    # Check if the file exists\n",
+    "    assert os.path.isfile(tile_h5_path), f\"Patches h5 file not found at {tile_h5_path}\"\n",
+    "\n",
+    "    # Define the embedding output path\n",
+    "    embed_path = os.path.join(test_embed_dir, f'{name_data}.h5')\n",
+    "\n",
+    "    # Generate the embeddings and save them to the defined path\n",
+    "    generate_embeddings(embed_path, encoder, device, tile_h5_path, args.batch_size, args.num_workers, overwrite=args.overwrite)\n",
+    "\n",
+    "    # Load the embeddings and related assets\n",
+    "    assets, _ = read_assets_from_h5(embed_path)\n",
+    "\n",
+    "    # Extract cell IDs and convert to a list of strings\n",
+    "    # The cell IDs are not necessary because the images are kept in the same order as the gene expression data\n",
+    "    cell_ids = assets['barcodes'].flatten().astype(str).tolist()\n",
+    "\n",
+    "    return assets"
    ]
   },
   {
