new submission with  multiprocessing

--- a/submission.ipynb
+++ b/submission.ipynb
@@ -68,7 +68,10 @@
     "import torch\n",
     "from torch.utils.data import Dataset\n",
     "import timm  # timm: A library to load pretrained SOTA computer vision models (e.g. classification, feature extraction, ...)\n",
-    "from sklearn.linear_model import Ridge  # Regression model"
+    "from sklearn.linear_model import Ridge  # Regression model\n",
+    "\n",
+    "from multiprocessing import Pool\n",
+    "from functools import partial"
    ]
   },
   {
@@ -1141,7 +1144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nearest_neighbor_predict(X_train, y_train, X_test, k=200):\n",
+    "def nearest_neighbor_predict_regular(X_train, y_train, X_test, k=200):\n",
     "    \"\"\"Find k nearest neighbors in training set for each test point and return average of their y values\"\"\"\n",
     "    predictions = []\n",
     "    for i, test_embedding in enumerate(X_test):\n",
@@ -1157,7 +1160,82 @@
     "        # Use average of their gene expressions as prediction\n",
     "        predictions.append(np.mean(y_train[nn_indices], axis=0))\n",
     "\n",
-    "    return np.array(predictions)"
+    "    return np.array(predictions)\n",
+    "\n",
+    "\n",
+    "def process_chunk(chunk_data, X_train, y_train, k):\n",
+    "    \"\"\"\n",
+    "    Process a single chunk of test data\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    chunk_data : tuple\n",
+    "        (start_idx, chunk_X_test) containing the start index and chunk of test data\n",
+    "    X_train : np.ndarray\n",
+    "        Training embeddings\n",
+    "    y_train : np.ndarray\n",
+    "        Training labels/values\n",
+    "    k : int\n",
+    "        Number of nearest neighbors\n",
+    "    \"\"\"\n",
+    "    start_idx, chunk_X_test = chunk_data\n",
+    "    chunk_size = len(chunk_X_test)\n",
+    "    chunk_predictions = np.zeros((chunk_size, y_train.shape[1]))\n",
+    "    \n",
+    "    # Process each sample in the chunk\n",
+    "    for i in range(chunk_size):\n",
+    "        # Calculate distances to all training points\n",
+    "        diff = X_train - chunk_X_test[i]\n",
+    "        distances = np.sum(diff * diff, axis=1)\n",
+    "        \n",
+    "        # Find k nearest neighbors\n",
+    "        nn_indices = np.argpartition(distances, k)[:k]\n",
+    "        # Calculate mean prediction\n",
+    "        chunk_predictions[i] = np.mean(y_train[nn_indices], axis=0)\n",
+    "    \n",
+    "    return (start_idx, chunk_predictions)\n",
+    "\n",
+    "def nearest_neighbor_predict_multiprocessing(X_train, y_train, X_test, k=200, chunk_size=100, n_processes=12):\n",
+    "    \"\"\"\n",
+    "    Parallel implementation of k-nearest neighbors using multiprocessing\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    X_train : np.ndarray\n",
+    "        Training embeddings\n",
+    "    y_train : np.ndarray \n",
+    "        Training labels/values\n",
+    "    X_test : np.ndarray\n",
+    "        Test embeddings\n",
+    "    k : int\n",
+    "        Number of nearest neighbors\n",
+    "    chunk_size : int\n",
+    "        Size of chunks for parallel processing\n",
+    "    n_processes : int\n",
+    "        Number of parallel processes to use\n",
+    "    \"\"\"\n",
+    "    n_test = X_test.shape[0]\n",
+    "    n_features = y_train.shape[1]\n",
+    "    predictions = np.zeros((n_test, n_features))\n",
+    "    \n",
+    "    # Prepare chunks of data\n",
+    "    chunks = []\n",
+    "    for start_idx in range(0, n_test, chunk_size):\n",
+    "        end_idx = min(start_idx + chunk_size, n_test)\n",
+    "        chunks.append((start_idx, X_test[start_idx:end_idx]))\n",
+    "    \n",
+    "    # Create a partial function with fixed arguments\n",
+    "    process_chunk_partial = partial(process_chunk, X_train=X_train, y_train=y_train, k=k)\n",
+    "    \n",
+    "    # Process chunks in parallel\n",
+    "    with Pool(processes=n_processes) as pool:\n",
+    "        # Use tqdm to show progress\n",
+    "        for start_idx, chunk_predictions in tqdm(pool.imap(process_chunk_partial, chunks), \n",
+    "                                               total=len(chunks)):\n",
+    "            end_idx = min(start_idx + chunk_size, n_test)\n",
+    "            predictions[start_idx:end_idx] = chunk_predictions\n",
+    "    \n",
+    "    return predictions"
    ]
   },
   {
@@ -1223,7 +1301,7 @@
     "    X_test = assets[\"embeddings\"]\n",
     "    print(\"Embedding shape (X_test):\", X_test.shape)\n",
     "\n",
-    "    average_predictions = nearest_neighbor_predict(embeddings, gene_expression_normalized, X_test)\n",
+    "    average_predictions = nearest_neighbor_predict_multiprocessing(embeddings, gene_expression_normalized, X_test)\n",
     "\n",
     "    ### Prepare and Return Predictions ###\n",
     "\n",
