--- a/submission.ipynb
+++ b/submission.ipynb
@@ -1163,77 +1163,96 @@
     "    return np.array(predictions)\n",
     "\n",
     "\n",
-    "def process_chunk(chunk_data, X_train, y_train, k):\n",
-    "    \"\"\"\n",
-    "    Process a single chunk of test data\n",
+    "# def process_chunk(chunk_data, X_train, y_train, k):\n",
+    "#     \"\"\"\n",
+    "#     Process a single chunk of test data\n",
     "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    chunk_data : tuple\n",
-    "        (start_idx, chunk_X_test) containing the start index and chunk of test data\n",
-    "    X_train : np.ndarray\n",
-    "        Training embeddings\n",
-    "    y_train : np.ndarray\n",
-    "        Training labels/values\n",
-    "    k : int\n",
-    "        Number of nearest neighbors\n",
-    "    \"\"\"\n",
-    "    start_idx, chunk_X_test = chunk_data\n",
-    "    chunk_size = len(chunk_X_test)\n",
-    "    chunk_predictions = np.zeros((chunk_size, y_train.shape[1]))\n",
+    "#     Parameters:\n",
+    "#     -----------\n",
+    "#     chunk_data : tuple\n",
+    "#         (start_idx, chunk_X_test) containing the start index and chunk of test data\n",
+    "#     X_train : np.ndarray\n",
+    "#         Training embeddings\n",
+    "#     y_train : np.ndarray\n",
+    "#         Training labels/values\n",
+    "#     k : int\n",
+    "#         Number of nearest neighbors\n",
+    "#     \"\"\"\n",
+    "#     start_idx, chunk_X_test = chunk_data\n",
+    "#     chunk_size = len(chunk_X_test)\n",
+    "#     chunk_predictions = np.zeros((chunk_size, y_train.shape[1]))\n",
     "    \n",
-    "    # Process each sample in the chunk\n",
-    "    for i in range(chunk_size):\n",
-    "        # Calculate distances to all training points\n",
-    "        diff = X_train - chunk_X_test[i]\n",
-    "        distances = np.sum(diff * diff, axis=1)\n",
+    "#     # Process each sample in the chunk\n",
+    "#     for i in range(chunk_size):\n",
+    "#         # Calculate distances to all training points\n",
+    "#         diff = X_train - chunk_X_test[i]\n",
+    "#         distances = np.sum(diff * diff, axis=1)\n",
     "        \n",
-    "        # Find k nearest neighbors\n",
-    "        nn_indices = np.argpartition(distances, k)[:k]\n",
-    "        # Calculate mean prediction\n",
-    "        chunk_predictions[i] = np.mean(y_train[nn_indices], axis=0)\n",
+    "#         # Find k nearest neighbors\n",
+    "#         nn_indices = np.argpartition(distances, k)[:k]\n",
+    "#         # Calculate mean prediction\n",
+    "#         chunk_predictions[i] = np.mean(y_train[nn_indices], axis=0)\n",
     "    \n",
-    "    return (start_idx, chunk_predictions)\n",
+    "#     return (start_idx, chunk_predictions)\n",
     "\n",
-    "def nearest_neighbor_predict_multiprocessing(X_train, y_train, X_test, k=200, chunk_size=100, n_processes=12):\n",
-    "    \"\"\"\n",
-    "    Parallel implementation of k-nearest neighbors using multiprocessing\n",
+    "# def nearest_neighbor_predict_multiprocessing(X_train, y_train, X_test, k=200, chunk_size=100, n_processes=12):\n",
+    "#     \"\"\"\n",
+    "#     Parallel implementation of k-nearest neighbors using multiprocessing\n",
     "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    X_train : np.ndarray\n",
-    "        Training embeddings\n",
-    "    y_train : np.ndarray \n",
-    "        Training labels/values\n",
-    "    X_test : np.ndarray\n",
-    "        Test embeddings\n",
-    "    k : int\n",
-    "        Number of nearest neighbors\n",
-    "    chunk_size : int\n",
-    "        Size of chunks for parallel processing\n",
-    "    n_processes : int\n",
-    "        Number of parallel processes to use\n",
-    "    \"\"\"\n",
-    "    n_test = X_test.shape[0]\n",
-    "    n_features = y_train.shape[1]\n",
-    "    predictions = np.zeros((n_test, n_features))\n",
+    "#     Parameters:\n",
+    "#     -----------\n",
+    "#     X_train : np.ndarray\n",
+    "#         Training embeddings\n",
+    "#     y_train : np.ndarray \n",
+    "#         Training labels/values\n",
+    "#     X_test : np.ndarray\n",
+    "#         Test embeddings\n",
+    "#     k : int\n",
+    "#         Number of nearest neighbors\n",
+    "#     chunk_size : int\n",
+    "#         Size of chunks for parallel processing\n",
+    "#     n_processes : int\n",
+    "#         Number of parallel processes to use\n",
+    "#     \"\"\"\n",
+    "#     n_test = X_test.shape[0]\n",
+    "#     n_features = y_train.shape[1]\n",
+    "#     predictions = np.zeros((n_test, n_features))\n",
     "    \n",
-    "    # Prepare chunks of data\n",
-    "    chunks = []\n",
-    "    for start_idx in range(0, n_test, chunk_size):\n",
-    "        end_idx = min(start_idx + chunk_size, n_test)\n",
-    "        chunks.append((start_idx, X_test[start_idx:end_idx]))\n",
+    "#     # Prepare chunks of data\n",
+    "#     chunks = []\n",
+    "#     for start_idx in range(0, n_test, chunk_size):\n",
+    "#         end_idx = min(start_idx + chunk_size, n_test)\n",
+    "#         chunks.append((start_idx, X_test[start_idx:end_idx]))\n",
     "    \n",
-    "    # Create a partial function with fixed arguments\n",
-    "    process_chunk_partial = partial(process_chunk, X_train=X_train, y_train=y_train, k=k)\n",
+    "#     # Create a partial function with fixed arguments\n",
+    "#     process_chunk_partial = partial(process_chunk, X_train=X_train, y_train=y_train, k=k)\n",
     "    \n",
-    "    # Process chunks in parallel\n",
-    "    with Pool(processes=n_processes) as pool:\n",
-    "        # Use tqdm to show progress\n",
-    "        for start_idx, chunk_predictions in tqdm(pool.imap(process_chunk_partial, chunks), \n",
-    "                                               total=len(chunks)):\n",
-    "            end_idx = min(start_idx + chunk_size, n_test)\n",
-    "            predictions[start_idx:end_idx] = chunk_predictions\n",
+    "#     # Process chunks in parallel\n",
+    "#     with Pool(processes=n_processes) as pool:\n",
+    "#         # Use tqdm to show progress\n",
+    "#         for start_idx, chunk_predictions in tqdm(pool.imap(process_chunk_partial, chunks), \n",
+    "#                                                total=len(chunks)):\n",
+    "#             end_idx = min(start_idx + chunk_size, n_test)\n",
+    "#             predictions[start_idx:end_idx] = chunk_predictions\n",
+    "    \n",
+    "#     return predictions\n",
+    "\n",
+    "def nearest_neighbor_predict_cdist(X_train, y_train, X_test, k=200):\n",
+    "    \"\"\"Find k nearest neighbors in training set for each test point using cdist and return average of their y values\"\"\"\n",
+    "    from scipy.spatial.distance import cdist\n",
+    "    \n",
+    "    # Calculate all pairwise distances at once using cdist\n",
+    "    distances = cdist(X_test, X_train, metric='euclidean')\n",
+    "    \n",
+    "    # If the test set is the same as training set, mask self-distances\n",
+    "    if X_test is X_train:\n",
+    "        np.fill_diagonal(distances, np.inf)\n",
+    "    \n",
+    "    # Find k nearest neighbors for all points at once\n",
+    "    nn_indices = np.argpartition(distances, k, axis=1)[:, :k]\n",
+    "    \n",
+    "    # Calculate predictions using broadcasting\n",
+    "    predictions = np.mean(y_train[nn_indices], axis=1)\n",
     "    \n",
     "    return predictions"
    ]
@@ -1253,8 +1272,8 @@
     "    embeddings_table = np.load(os.path.join(model_directory_path, f\"combined_dataset.npz\"))\n",
     "\n",
     "    # Load and normalize the data\n",
-    "    embeddings = embeddings_table['embeddings'][::100]\n",
-    "    gene_expression = embeddings_table['gene_expression'][::100]\n",
+    "    embeddings = embeddings_table['embeddings'][::10]\n",
+    "    gene_expression = embeddings_table['gene_expression'][::10]\n",
     "    gene_expression_normalized = log1p_normalization(gene_expression)\n",
     "\n",
     "    # Load training configuration parameters\n",
@@ -1301,7 +1320,7 @@
     "    X_test = assets[\"embeddings\"]\n",
     "    print(\"Embedding shape (X_test):\", X_test.shape)\n",
     "\n",
-    "    average_predictions = nearest_neighbor_predict_multiprocessing(embeddings, gene_expression_normalized, X_test)\n",
+    "    average_predictions = nearest_neighbor_predict_cdist(embeddings, gene_expression_normalized, X_test)\n",
     "\n",
     "    ### Prepare and Return Predictions ###\n",
     "\n",
